cupsys (1.1.99.rc2-0exp2) UNRELEASED-experimental; urgency=low

  [Martin Pitt]
  * debian/patches/55_ppd_okidata_name.dpatch: Change "Oki" manufacturer name
    to "Okidata" to be consistent with other PPD files.

 -- Kenshi Muto <kmuto@debian.org>  Wed, 19 Apr 2006 13:08:15 +0200

cupsys (1.1.99.rc2-0exp1) experimental; urgency=low

  [ Kenshi Muto ]
  * New upstream release 1.2RC2.
    - Because -fpie config becomes optional, compiler works on amd64 and
      other architectures. (closes: #335199)
  * Enable LDAP support.
  * Remove duplicated update-rc.d (closes: #356911)
  * Stopped asking admin password because it works only if user chooses
    digest authentication. The default configuration of Debian uses
    PAM and basic authentication.
  * Enable dbus support.
  * 03_clean.dpatch: Remove produced and remained files during build.
  * Now CUPS uses 'lp' user/group privilege to call backend or any other
    programs.
    CUPS SystemGroup is 'lpadmin'. You need to add users who are allowed
    to add/modify/remove printers/jobs/classes.
  * Remove image.h.patch from source. It is no longer needed.
  * 02_configure.dpath: Remove -rpath from configure.
  * Fix typo in cupsys-bsd description. (closes: #362070)
  * Add Galician debconf translation. (closes: #361258)
  * Update Danish debconf translation. (closes: #357969)
  * Use 'reload' during logrotate instead of 'restart'. It looks safe
    on CUPS 1.2. (though job-restart problem still remains)
  * set TZ in init script only if TZ isn't defined yet.
  * Use if-fi structure style for postrotate of logrotate script.
    It solves error when cupsys is not running. (closes: #347641)
  * Unset TMPDIR environment variable before running daemon. (closes: #347829)
  * Removed /etc/cups/pdftops.conf because it was for pdftops of upstream
    version. Debian CUPS uses xpdf-utils wrapper and doesn't need
    pdftops.conf.
  * Notice: /etc/cups/client.conf has been removed upstream.