@@ -4,3 +4,4 @@ etc/default
 etc/cups/cups.d
 usr/lib/cups/backend-available
 var/cache/cups/ppd
+usr/share/ppd/cups-included
