@@ -3,8 +3,13 @@ cupsys (1.1.99.rc2-0exp2) UNRELEASED-experimental; urgency=low
   [Martin Pitt]
   * debian/patches/55_ppd_okidata_name.dpatch: Change "Oki" manufacturer name
     to "Okidata" to be consistent with other PPD files.
+  * Implement http://wiki.debian.org/PpdFileStructureSpecification:
+    - debian/dirs: Create /usr/share/ppd/cups-included/.
+    - debian/rules: Install shipped PPDs into
+      /usr/share/ppd/cups-included/<Manufacturer>/ and provide a symlink to
+      the old /usr/share/cups/model directory for backwards compatibility.
 
- -- Kenshi Muto <kmuto@debian.org>  Wed, 19 Apr 2006 13:08:15 +0200
+ -- Kenshi Muto <kmuto@debian.org>  Wed, 19 Apr 2006 13:11:08 +0200
 
 cupsys (1.1.99.rc2-0exp1) experimental; urgency=low
 
